Fix localization test failures and Update CitationCommentWriterTest to use assertInstanceOf instead     of assertTrue with instanceof check